--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "Rijalganzz",
+    "name": "Hiura",
     "version": "2.7.0",
-    "description": "Simple Whatsapp Bot Furina",
+    "description": "Simple Whatsapp Bot Lumina",
     "main": "index.js",
     "type": "module",
     "directories": {
