--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     ],
     "homepage": "https://github.com/Zeltoria/Clara-MD",
     "author": {
-        "name": "lann"
+        "name": "Hiura"
     },
     "repository": {
         "type": "git",
